--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
                     <blockquote>"Jeder kriegt die Chance erfolgreich zu sein. Nicht jeder nimmt sie jedoch wahr."</blockquote>
                     <a>-Andreas Tide</a>
                     <br>
-                    <p>Email:<br>2010953@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2010953@stud.hs-mannheim.de">2010953@stud.hs-mannheim.de</a></p>
                 </li>
                 <li>
                     <img src="images/people/Aaron_SEP.jpg" alt="person">
                     <blockquote>"Lieber nachlegen als hinlegen"</blockquote>
                     <a>-Aaron Butz</a>
                     <br>
-                    <p>Email:<br>2021662@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2021662@stud.hs-mannheim.de">2021662@stud.hs-mannheim.de</a></p>
                 </li>
                 <li>
                     <img src="images/people/Beni_SEP.jpg" alt="person">
                     <blockquote>"Auf der Welt hier ist Beständigkeit vergänglich, nur Vergänglichkeit beständig"</blockquote>
                     <a>-Benjamin Löffler</a>
                     <br>
-                    <p>Email:<br>1911374@stud.hs-mannheim.de</p>
+                    <p>Email:<br> <a href="mailto:1911374@stud.hs-mannheim.de"> 1911374@stud.hs-mannheim.de</a></p>
                 </li>
                 <li>
                     <img src="images/people/Slaven_SEP.jpg" alt="person">
                     <blockquote>"Before you marry a person, you should first make them use a computer with slow Internet to see who they really are"</blockquote>
                     <a>-Slaven Džinić</a>
                     <br>
-                    <p>Email:<br>2024216@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2024216@stud.hs-mannheim.de">2024216@stud.hs-mannheim.de</a></p>
                 </li>
             </ul>
         </div>
@@ -95,21 +95,21 @@
                     <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
                     <a>-Sanja Schleicher</a>
                     <br>
-                    <p>Email:<br>2020411@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2020411@stud.hs-mannheim.de">2020411@stud.hs-mannheim.de</a></p>
                 </li>
                 <li>
                     <img src="images/people/Gizem_SEP.jpg" alt="person">
                     <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
                     <a>-Gizem Ipek</a>
                     <br>
-                    <p>Email:<br>2010429@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2010429@stud.hs-mannheim.de">2010429@stud.hs-mannheim.de</a></p>
                 </li>
                 <li>
                     <img src="images/people/Paula_SEP.jpg" alt="person">
                     <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
                     <a>-Paula Groth</a>
                     <br>
-                    <p>Email:<br>2020435@stud.hs-mannheim.de</p>
+                    <p>Email:<br><a href="mailto:2020435@stud.hs-mannheim.de">2020435@stud.hs-mannheim.de</a></p>
                 </li>
                 
             </ul>
@@ -121,7 +121,7 @@
         <div class="container">
             <h1>Kontakt</h1>
             <ul  class="features-list">
-                <li>CODUX Email: <span>codux@gmz.de</span></li>
+                <li>CODUX Email: <span><a href="mailto:codux@gmz.de">codux@gmz.de</a></span></li>
                 <li>Scrum Master:<span>Andreas Tide</span></li>
                 <li>Produkt Owner:<span>Aaron Butz</span></li>
             </ul>
