--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="container">
             <h1>Kontakt</h1>
             <ul  class="features-list">
-                <li>CODUX Email: <span><a id="coduxMail" href="mailto:codux@gmz.de">codux@gmz.de</a></span></li>
+                <li>CODUX Email: <span><a id="coduxMail" href="mailto:codux@gmx.de">codux@gmx.de</a></span></li>
                 <li>Scrum Master:<span>Andreas Tide</span></li>
                 <li>Produkt Owner:<span>Aaron Butz</span></li>
             </ul>
