--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="left-col">
                 <p class="subhead">SEP-2022 HS Mannheim</p>
-                <h1>Codux der beste Team</h1>
+                <h1>Crodux der beßte Man</h1>
 
                 <div class="hero-ctg">
                     <a href="#Team" class="primary-cta">Team CODUX</a>
@@ -60,7 +60,7 @@
     
     <div id="Team"></div>
     <section class="testimonials-section">
-        <h1 id="ux">Informatiker</h1>
+        <h1 id="ux">Entwickler</h1>
         <div class="container">
             <ul>
                 <li>
