--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="left-col">
                 <p class="subhead">SEP-2022 HS Mannheim</p>
-                <h1>Crodux der beßte Man</h1>
+                <h1>Code to perfection</h1>
 
                 <div class="hero-ctg">
                     <a href="#Team" class="primary-cta">Team CODUX</a>
@@ -72,21 +72,21 @@
                 </li>
                 <li>
                     <img src="images/people/Aaron_SEP.jpg" alt="person">
-                    <blockquote>"Lieber nachlegen als hinlegen"</blockquote>
+                    <blockquote>"Lieber nachlegen als hinlegen."</blockquote>
                     <p>-Aaron Butz</p>
                     <br>
                     <a>Email:<br><a href="mailto:2021662@stud.hs-mannheim.de">2021662@stud.hs-mannheim.de</a></a>
                 </li>
                 <li>
                     <img src="images/people/Beni_SEP.jpg" alt="person">
-                    <blockquote>"Auf der Welt hier ist Beständigkeit vergänglich, nur Vergänglichkeit beständig"</blockquote>
+                    <blockquote>"Auf der Welt hier ist Beständigkeit vergänglich, nur Vergänglichkeit beständig."</blockquote>
                     <p>-Benjamin Löffler</p>
                     <br>
                     <a>Email:<br> <a href="mailto:1911374@stud.hs-mannheim.de"> 1911374@stud.hs-mannheim.de</a></a>
                 </li>
                 <li>
                     <img src="images/people/Slaven_SEP.jpg" alt="person">
-                    <blockquote>"Before you marry a person, you should first make them use a computer with slow Internet to see who they really are"</blockquote>
+                    <blockquote>"Before you marry a person, you should first make them use a computer with slow Internet to see who they really are."</blockquote>
                     <p>-Slaven Džinić</p>
                     <br>
                     <a>Email:<br><a href="mailto:2024216@stud.hs-mannheim.de">2024216@stud.hs-mannheim.de</a></a>
@@ -101,21 +101,21 @@
             <ul>
                 <li>
                     <img src="images/people/Sanja_SEP.jpg" alt="person">
-                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <blockquote>"Design adds value faster than it adds costs"</blockquote>
                     <p>-Sanja Schleicher</p>
                     <br>
                     <a>Email:<br><a href="mailto:2020411@stud.hs-mannheim.de">2020411@stud.hs-mannheim.de</a></a>
                 </li>
                 <li>
                     <img src="images/people/Gizem_SEP.jpg" alt="person">
-                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <blockquote>"The function of design is letting design function."</blockquote>
                     <p>-Gizem Ipek</p>
                     <br>
                     <a>Email:<br><a href="mailto:2010429@stud.hs-mannheim.de">2010429@stud.hs-mannheim.de</a></a>
                 </li>
                 <li>
                     <img src="images/people/Paula_SEP.jpg" alt="person">
-                    <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore"</blockquote>
+                    <blockquote>"Design is intelligence made visible."</blockquote>
                     <p>-Paula Groth</p>
                     <br>
                     <a>Email:<br><a href="mailto:2020435@stud.hs-mannheim.de">2020435@stud.hs-mannheim.de</a></a>
