--- a/index.html
+++ b/index.html
@@ -45,28 +45,29 @@
     <section class="features-section-SEP">
         <div class="container">
             <div id="textContainer">
-            <h1 id="SEP-h1">Software-Engineering Project</h1>
-            <a id="SEP-text">Wir sind das Team Codux und nehmen dieses Semester (WS 22/23) am Software-Engineering-Projekt (SEP) der Hochschule Mannheim teil.
-            <br>
-            Bereits an unserem Namen kann man erkennen, wie wichtig uns Teamwork ist, denn Codux ist eine Zusammensetzung der Worte „Code“ und „UX", was den 
-            Fakultäten Informatik und Gestaltung entspricht. Zusammen als Team freuen wir uns auf ein spannendes Semester, welches es uns ermöglicht, mit einer 
-            großen Firma wie John Deere zusammenzuarbeiten.
-           <br>
-            Dieses Semester dreht sich alles darum, den Kunden von John Deere eine schnelle und automatisierte Möglichkeit zu bieten, eine Vielzahl von 
-            Informationen über ihre Bestellungen anzubieten, wie z. B. das erwartete Lieferdatum oder Status der Bestellung. </a>
+                <h1 id="SEP-h1">Software-Engineering Project</h1>
+                <a id="SEP-text">Wir sind das Team Codux und nehmen dieses Semester (WS 22/23) am Software-Engineering-Projekt (SEP) der Hochschule Mannheim teil.
+                <br>
+                Bereits an unserem Namen kann man erkennen, wie wichtig uns Teamwork ist, denn Codux ist eine Zusammensetzung der Worte „Code“ und „UX", was den 
+                Fakultäten Informatik und Gestaltung entspricht. Zusammen als Team freuen wir uns auf ein spannendes Semester, welches es uns ermöglicht, mit einer 
+                großen Firma wie John Deere zusammenzuarbeiten.
+                <br>
+                Dieses Semester dreht sich alles darum, den Kunden von John Deere eine schnelle und automatisierte Möglichkeit zu bieten, eine Vielzahl von 
+                Informationen über ihre Bestellungen anzubieten, wie z. B. das erwartete Lieferdatum oder Status der Bestellung. </a>
             </div>
         </div>
     </section>
     
     <div id="Team"></div>
     <section class="testimonials-section">
-        <h1 id="ux">Entwickler</h1>
+        <h1 id="ux">Unser Team</h1>
         <div class="container">
             <ul>
                 <li>
                     <img src="images/people/Andreas_SEP.jpg" alt="person">
                     <blockquote>"Jeder kriegt die Chance erfolgreich zu sein. Nicht jeder nimmt sie jedoch wahr."</blockquote>
                     <p>-Andreas Tide</p>
+                    <p>Entwickler</p>
                     <br>
                     <a>Email:<br><a href="mailto:2010953@stud.hs-mannheim.de">2010953@stud.hs-mannheim.de</a></a>
                 </li>
@@ -74,6 +75,7 @@
                     <img src="images/people/Aaron_SEP.jpg" alt="person">
                     <blockquote>"Lieber nachlegen als hinlegen."</blockquote>
                     <p>-Aaron Butz</p>
+                    <p>Entwickler</p>
                     <br>
                     <a>Email:<br><a href="mailto:2021662@stud.hs-mannheim.de">2021662@stud.hs-mannheim.de</a></a>
                 </li>
@@ -81,6 +83,7 @@
                     <img src="images/people/Beni_SEP.jpg" alt="person">
                     <blockquote>"Auf der Welt hier ist Beständigkeit vergänglich, nur Vergänglichkeit beständig."</blockquote>
                     <p>-Benjamin Löffler</p>
+                    <p>Entwickler</p>
                     <br>
                     <a>Email:<br> <a href="mailto:1911374@stud.hs-mannheim.de"> 1911374@stud.hs-mannheim.de</a></a>
                 </li>
@@ -88,6 +91,7 @@
                     <img src="images/people/Slaven_SEP.jpg" alt="person">
                     <blockquote>"Before you marry a person, you should first make them use a computer with slow Internet to see who they really are."</blockquote>
                     <p>-Slaven Džinić</p>
+                    <p>Entwickler</p>
                     <br>
                     <a>Email:<br><a href="mailto:2024216@stud.hs-mannheim.de">2024216@stud.hs-mannheim.de</a></a>
                 </li>
@@ -96,13 +100,14 @@
     </section>
     
     <section class="testimonials-section">
-        <h1 id="ux2">Designer</h1>
+        <h1 id="ux2"></h1>
         <div class="container">
             <ul>
                 <li>
                     <img src="images/people/Sanja_SEP.jpg" alt="person">
                     <blockquote>"Design adds value faster than it adds costs"</blockquote>
                     <p>-Sanja Schleicher</p>
+                    <p>Designer</p>
                     <br>
                     <a>Email:<br><a href="mailto:2020411@stud.hs-mannheim.de">2020411@stud.hs-mannheim.de</a></a>
                 </li>
@@ -110,6 +115,7 @@
                     <img src="images/people/Gizem_SEP.jpg" alt="person">
                     <blockquote>"The function of design is letting design function."</blockquote>
                     <p>-Gizem Ipek</p>
+                    <p>Designer</p>
                     <br>
                     <a>Email:<br><a href="mailto:2010429@stud.hs-mannheim.de">2010429@stud.hs-mannheim.de</a></a>
                 </li>
@@ -117,6 +123,7 @@
                     <img src="images/people/Paula_SEP.jpg" alt="person">
                     <blockquote>"Design is intelligence made visible."</blockquote>
                     <p>-Paula Groth</p>
+                    <p>Designer</p>
                     <br>
                     <a>Email:<br><a href="mailto:2020435@stud.hs-mannheim.de">2020435@stud.hs-mannheim.de</a></a>
                 </li>
